@@ -8,8 +8,8 @@ public class PortalConsts {
 	private PortalConsts() {}
 	
 	
-	public static final String T_BROWSE = "browse";
-	public static final String T_SEARCH = "search";
+	public static final String T_BROWSE = "b";
+	public static final String T_SEARCH_TERMS = "st";
 	public static final String T_USER_ACCOUNT = "ua";
 	public static final String T_SIGN_IN = "login";
 	public static final String T_SIGN_OUT = "logout";
